maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:4: error: recursive variable sommeAngle needs type
  do { var sommeAngle= keepHandOnSideWall(sommeAngle)
                                          ^